Fixed a cropping bug and UI cleanup

--- a/style.css
+++ b/style.css
@@ -16,3 +16,7 @@ canvas {
 .fc-container {
     display: inline-block;
 }
+
+button {
+    display: block;
+}
